# Salad CMake Configuration
cmake_minimum_required(VERSION 2.8.12)
project(salad)
message("Thank you for using salad!")

# Main library
file(GLOB SOURCES src/*.c)
list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/daemon.c)
#include_directories(include)
add_library(salad SHARED ${SOURCES})
add_library(salad_daemon SHARED src/daemon.c)
set_target_properties(salad PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
set_target_properties(salad_daemon PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
target_include_directories(salad PUBLIC include)
target_include_directories(salad_daemon PUBLIC include)

# Samples
add_executable(samples/daemon samples/daemon.c)
target_include_directories(samples/daemon PUBLIC include)
target_link_libraries(samples/daemon salad_daemon salad)
add_executable(samples/list samples/list.c)
target_include_directories(samples/list PUBLIC include)
target_link_libraries(samples/list salad)
add_executable(samples/log samples/log.c)
target_include_directories(samples/log PUBLIC include)
target_link_libraries(samples/log salad)
add_executable(samples/map samples/map.c)
target_include_directories(samples/map PUBLIC include)
target_link_libraries(samples/map salad)
add_executable(samples/options samples/options.c)
target_include_directories(samples/options PUBLIC include)
target_link_libraries(samples/options salad)
add_executable(samples/queue samples/queue.c)
target_include_directories(samples/queue PUBLIC include)
target_link_libraries(samples/queue salad)
add_executable(samples/stack samples/stack.c)
target_include_directories(samples/stack PUBLIC include)
target_link_libraries(samples/stack salad)
add_executable(samples/vector samples/vector.c)
target_include_directories(samples/vector PUBLIC include)
target_link_libraries(samples/vector salad)
